[project]
name = "certfuzz"
version = "2.8.0"
description = "CERT Basic Fuzzing Framework"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "PyYAML>=6.0",
    "pywin32>=306",
    "WMI>=1.5.1",
]

[project.scripts]
bff = "certfuzz.bff.windows:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/certfuzz"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
